--- a/style.css
+++ b/style.css
@@ -4,34 +4,34 @@
     box-sizing: border-box;
     text-align: center;
 }
-body{
-    background-image: url("images/pa.jpg" );
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-   
-}
+
 .main{
     width: 100%;
-    height: 50vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 20px;
+    background-color: dar;
+    
 }
 
 .container{
-    width: 100%;
+    width: 400px;
     gap: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    box-shadow: rgb(0, 0, 0) 0px 3px 8px;
+    padding: 50px 20px;
+   
+    background-color: wheat;
     
     /* background-color: gold; */
 }
 .heading{
-    margin-top: 100px;
+    
     width: 90%;
     /* height: 50px; */
     display: flex;
@@ -39,8 +39,9 @@ body{
     justify-content: center;
     text-align: center;
     font-weight: bolder;
-    color: green;
-    font-size: 2rem;
+    color: darkgreen;
+    font-size: 1.5rem;
+    text-shadow: 2px 2px silver;
 }
 .inp{
     width: 90%;
@@ -94,11 +95,26 @@ display: flex;
 align-items: center;
 justify-content: center;
 text-align: center;
-font-size:1.5rem;
-color: #000066;
-box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+font-size:1.2rem;
+color: darkgreen;
+
+text-shadow: 2px 2px silver;
 
 }
+
+@media screen and (max-width:500px){
+    .container{
+        width: 280px;
+    }
+    .heading{
+        font-size: 1rem;
+    }
+    .footer{
+        font-size: 0.8rem;
+    }
+}
+    
+
 
    
    
