--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    background-color: dar;
+   background-color: darkgreen;
     
 }
 
