--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-   background-color: darkgreen;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
     
 }
 
